--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 annotated-types==0.7.0
 anyio==4.9.0
+beautifulsoup4==4.13.3
 blis==1.2.0
+bs4==0.0.2
 catalogue==2.0.10
 certifi==2025.1.31
 charset-normalizer==3.4.1
@@ -8,6 +10,7 @@ click==8.1.8
 cloudpathlib==0.21.0
 confection==0.1.5
 cymem==2.0.11
+dotenv==0.9.9
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 filelock==3.18.0
 fsspec==2025.3.0
@@ -35,7 +38,9 @@ langchain-text-splitters==0.3.7
 langcodes==3.5.0
 langsmith==0.3.18
 language_data==1.3.0
+lxml==5.3.1
 marisa-trie==1.2.1
+Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
@@ -67,6 +72,9 @@ pydantic==2.10.6
 pydantic_core==2.27.2
 Pygments==2.19.1
 PyMuPDF==1.25.4
+PyPDF2==3.0.1
+python-docx==1.1.2
+python-dotenv==1.1.0
 PyYAML==6.0.2
 qdrant-client==1.13.3
 regex==2024.11.6
@@ -81,6 +89,7 @@ setuptools==78.0.2
 shellingham==1.5.4
 smart-open==7.1.0
 sniffio==1.3.1
+soupsieve==2.6
 spacy==3.8.4
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
@@ -100,5 +109,6 @@ typing_extensions==4.12.2
 urllib3==2.3.0
 wasabi==1.1.3
 weasel==0.4.1
+wheel==0.45.1
 wrapt==1.17.2
 zstandard==0.23.0
